--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ django-taggit==1.3.0
 mysql-connector-python==8.0.23
 mysqlclient==2.0.3
 protobuf==3.15.5
+psycopg2==2.8.6
+python-dotenv==0.15.0
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
-django-taggit==1.3.0
