--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-crispy-forms==1.11.2
 django-taggit==1.3.0
 mysql-connector-python==8.0.23
 mysqlclient==2.0.3
+Pillow==8.1.2
 protobuf==3.15.5
 psycopg2==2.8.6
 python-dotenv==0.15.0
