--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 asgiref==3.3.1
 Django==3.1.7
 django-crispy-forms==1.11.2
+django-environ==0.4.5
 django-taggit==1.3.0
 mysql-connector-python==8.0.23
-mysqlclient==2.0.3
 Pillow==8.1.2
 protobuf==3.15.5
-psycopg2==2.8.6
-python-dotenv==0.15.0
+psycopg2-binary==2.8.6
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
