--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 Django==3.1.7
 django-crispy-forms==1.11.2
 django-taggit==1.3.0
+Markdown==3.2.1
 mysql-connector-python==8.0.23
 mysqlclient==2.0.3
 Pillow==8.1.2
