--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Django==3.1.7
 django-crispy-forms==1.11.2
 django-taggit==1.3.0
 django-taggit-labels==0.7.0
-environ==1.0
+django-environ==0.4.5
 Markdown==3.2.1
 mysql-connector-python==8.0.23
 mysqlclient==2.0.3
