--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 asgiref==3.3.1
 Django==3.1.7
 django-crispy-forms==1.11.2
+django-environ==0.4.5
 django-taggit==1.3.0
 django-taggit-labels==0.7.0
-django-environ==0.4.5
+django-voting==1.0
 Markdown==3.2.1
 mysql-connector-python==8.0.23
 mysqlclient==2.0.3
