--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ mysqlclient==2.0.3
 Pillow==8.1.2
 protobuf==3.15.5
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
 python-dotenv==0.15.0
 pytz==2021.1
 six==1.15.0
