--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 asgiref==3.3.1
 Django==3.1.7
+django-ckeditor==6.0.0
 django-crispy-forms==1.11.2
 django-environ==0.4.5
+django-js-asset==1.2.2
 django-taggit==1.3.0
 django-taggit-labels==0.7.0
 django-voting==1.0
 Markdown==3.2.1
 mysql-connector-python==8.0.23
-mysqlclient==2.0.3
 Pillow==8.1.2
 protobuf==3.15.5
 psycopg2==2.8.6
